[gd_scene load_steps=3 format=3 uid="uid://5rj6af173hws"]

[ext_resource type="Script" path="res://Gameworks/UI/Options.gd" id="1_m7sk8"]
[ext_resource type="Texture2D" uid="uid://bcbs6u4u8gohf" path="res://Sprites/rules.png" id="2_jwkwd"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 824.0
offset_top = 17.0
offset_right = 824.0
offset_bottom = 17.0
size_flags_horizontal = 8
script = ExtResource("1_m7sk8")

[node name="FSCheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_top = 51.0
offset_right = 44.0
offset_bottom = 75.0

[node name="FSLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 51.0
offset_right = 123.0
offset_bottom = 77.0
text = "Fullscreen"

[node name="TimerCheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_top = 117.0
offset_right = 44.0
offset_bottom = 141.0

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 117.0
offset_right = 210.0
offset_bottom = 143.0
text = "Show speedrun timer"

[node name="CheckpointsCheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_top = 180.0
offset_right = 44.0
offset_bottom = 204.0

[node name="CheckpointsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 180.0
offset_right = 952.0
offset_bottom = 206.0
text = "Enable checkpoints"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 262.0
offset_right = 1044.0
offset_bottom = 1262.0
scale = Vector2(0.360001, 0.360001)
texture = ExtResource("2_jwkwd")

[connection signal="toggled" from="FSCheckButton" to="." method="_on_fs_check_button_toggled"]
[connection signal="toggled" from="TimerCheckButton" to="." method="_on_timer_check_button_toggled"]
[connection signal="toggled" from="CheckpointsCheckButton" to="." method="_on_checkpoints_check_button_toggled"]
